# ah-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/filings/: README.md
data/research/: 0700.HK-external-research-2026-05-01.md  0700.HK-section-4.5-redflag-scan-2026-05-01.md
docs/value-profile/: methodology-tang.md  template-zh.md
notebooks/: phase2_acceptance.ipynb  phase3_dossier_example.ipynb  phase3_factor_study_value.ipynb  phase3_portfolio_construction.ipynb  phase3_screener_workflow.ipynb  phase4_1_optimizer_example.ipynb  phase4_2_filings_example.ipynb  phase4_3_dossier_qualitative_example.ipynb  phase4_4_screener_enrichment_example.ipynb  phase4_5_filings_search_example.ipynb  phase4_6_corpus_summary_example.ipynb  phase4_8_constructor_optimize_example.ipynb  phase5_chat_example.ipynb
profiles/: 0700.HK-2026-05-01.md  0700.HK-2026-05-02.md  600519.SH-2026-04-28-evaluation.md  600519.SH-2026-04-28.md  600519.SH-2026-05-01.md
scripts/: _regen_engine_characterization_fixtures.py  download_filings.py  download_research.py  extract_pdf.py
src/ah_research/: __init__.py  cli.py  concurrency.py  config.py  constants.py  exceptions.py  logging.py  meta.py
tests/: conftest.py  test_download_filings.py  test_extract_pdf.py
tests/integration/: _engine_characterization.py  test_acceptance_notebook_runs.py  test_akshare_live.py  test_baostock_live.py  test_chat_real_api.py  test_dossier_with_real_filings.py  test_download_filings_cninfo_live.py  test_download_filings_hkex_live.py  test_download_research.py  test_end_to_end_dossier.py  test_end_to_end_factor_study.py  test_end_to_end_value_factor.py  (+17 more)
(+287 files in other folders)
