[project]
name = "ah-research"
version = "0.0.1"
description = "Personal A-shares + HK stock research platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=1.0",
    "pandera[pandas]>=0.20",
    "tenacity>=8.5",
    "structlog>=24",
    "pydantic-settings>=2.2",
    "keyring>=25",
    "pyyaml>=6",
    "baostock>=0.8.8",
    "akshare>=1.14",
    "typer>=0.12",
    "pypinyin>=0.52",
]

[project.optional-dependencies]
ai = ["anthropic>=0.45", "pillow>=10.0"]
chat = ["streamlit>=1.38", "jupyter_client>=8", "plotly>=5.22"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml",
]

[project.scripts]
ah = "ah_research.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ah_research"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "N818",   # exception names intentionally omit "Error" suffix (e.g. SourceRateLimit, LeakageDetected) for raise-site readability
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "live: integration tests that hit real APIs (set AH_RESEARCH_LIVE=1)",
    "slow: tests that take >1s",
]

[tool.uv.workspace]
members = [
    "ah-research",
]
